--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -12,6 +12,10 @@
           "/manifest.webmanifest",
           "/*.css",
           "/*.js"
+        ],
+        "urls":[
+          "https://fonts.googleapis.com/css?family=Oswald:300,700"
+          ,"https://fonts.gstatic.com/**"
         ]
       }
     },
@@ -25,6 +29,18 @@
           "/*.(eot|svg|cur|jpg|png|webp|gif|otf|ttf|woff|woff2|ani)"
         ]
       }
+    }
+  ],
+  "dataGroups": [
+    {
+      "name":"posts",
+      "urls":["https://jsonplaceholder.typicode.com/posts"],
+      "cacheConfig":{
+        "maxSize":5,
+        "maxAge": "6h",
+        "timeout":"10s",
+        "strategy":"freshness"
+      } 
     }
   ]
 }
